@@ -215,7 +215,7 @@ public class Generator implements IGenerator, Closeable {
 		if (element.getModElement().isCodeLocked()) {
 			LOG.debug("Skipping code generation for mod element: " + element.getModElement().getName()
 					+ " - the code of this element is locked");
-			return Collections.emptyList();
+			return new ArrayList<>();
 		}
 
 		Map<?, ?> map = generatorConfiguration.getDefinitionsProvider()
@@ -223,13 +223,13 @@ public class Generator implements IGenerator, Closeable {
 		if (map == null) {
 			LOG.warn("Failed to load element definition for mod element type " + element.getModElement().getType()
 					.getRegistryName());
-			return Collections.emptyList();
+			return new ArrayList<>();
 		}
 
 		Set<GeneratorFile> generatorFiles = new HashSet<>();
 
 		// generate all source files
-		List<GeneratorTemplate> generatorTemplateList = getModElementGeneratorTemplatesList(element, performFSTasks);
+		List<GeneratorTemplate> generatorTemplateList = getModElementGeneratorTemplatesList(element);
 		for (GeneratorTemplate generatorTemplate : generatorTemplateList) {
 			String templateFileName = (String) generatorTemplate.getTemplateDefinition().get("template");
 
@@ -290,11 +290,10 @@ public class Generator implements IGenerator, Closeable {
 			return;
 		}
 
-		getModElementGeneratorTemplatesList(generatableElement, true).forEach(template -> {
-			if (workspace.getFolderManager().isFileInWorkspace(template.getFile())) {
+		for (GeneratorTemplate template : getModElementGeneratorTemplatesList(generatableElement)) {
+			if (workspace.getFolderManager().isFileInWorkspace(template.getFile()))
 				template.getFile().delete();
-			}
-		});
+		}
 
 		// delete localization keys associated with the mod element
 		LocalizationUtils.deleteLocalizationKeys(this, generatableElement, (List<?>) map.get("localizationkeys"));
@@ -385,7 +384,7 @@ public class Generator implements IGenerator, Closeable {
 		if (templates != null)
 			return processTemplateDefinitionsToGeneratorTemplates(templates, performFSTasks, templateID);
 
-		return Collections.emptyList();
+		return new ArrayList<>();
 	}
 
 	private List<GeneratorTemplate> processTemplateDefinitionsToGeneratorTemplates(@Nonnull List<?> templates, boolean performFSTasks,
@@ -418,11 +417,6 @@ public class Generator implements IGenerator, Closeable {
 	}
 
 	public List<GeneratorTemplate> getModElementGeneratorTemplatesList(GeneratableElement generatableElement) {
-		return getModElementGeneratorTemplatesList(generatableElement, false);
-	}
-
-	private List<GeneratorTemplate> getModElementGeneratorTemplatesList(GeneratableElement generatableElement,
-			boolean performFSTasks) {
 		if (generatableElement == null)
 			throw new RuntimeException("GeneratableElement is null");
 
@@ -432,7 +426,7 @@ public class Generator implements IGenerator, Closeable {
 		if (map == null) {
 			LOG.info("Failed to load element definition for mod element type " + generatableElement.getModElement()
 					.getType().getRegistryName());
-			return Collections.emptyList();
+			return new ArrayList<>();
 		}
 
 		Set<GeneratorTemplate> files = new HashSet<>();
@@ -463,18 +457,12 @@ public class Generator implements IGenerator, Closeable {
 		}
 
 		// we add all list templates (if any) for given element to the list
-		getModElementListTemplates(generatableElement, performFSTasks).forEach(
-				e -> e.forEachTemplate(files::add, null));
+		getModElementListTemplates(generatableElement).forEach(e -> e.forEachTemplate(files::add, null));
 
 		return new ArrayList<>(files);
 	}
 
 	public List<GeneratorTemplatesList> getModElementListTemplates(GeneratableElement generatableElement) {
-		return getModElementListTemplates(generatableElement, false);
-	}
-
-	private List<GeneratorTemplatesList> getModElementListTemplates(GeneratableElement generatableElement,
-			boolean performFSTasks) {
 		if (generatableElement == null)
 			throw new RuntimeException("GeneratableElement is null");
 
@@ -483,7 +471,7 @@ public class Generator implements IGenerator, Closeable {
 		if (map == null) {
 			LOG.info("Failed to load element list templates definition for mod element type "
 					+ generatableElement.getModElement().getType().getRegistryName());
-			return Collections.emptyList();
+			return new ArrayList<>();
 		}
 
 		Set<GeneratorTemplatesList> fileLists = new HashSet<>();
@@ -500,13 +488,13 @@ public class Generator implements IGenerator, Closeable {
 				// we check type of list data collection and convert it to a list if needed
 				List<?> items;
 				if (listData instanceof Map<?, ?> listMap)
-					items = new ArrayList<>(listMap.entrySet());
+					items = List.copyOf(listMap.entrySet());
 				else if (listData instanceof Collection<?> collection)
-					items = new ArrayList<>(collection);
+					items = List.copyOf(collection);
 				else if (listData instanceof Iterable<?> iterable) // fallback for the worst case
-					items = StreamSupport.stream(iterable.spliterator(), false).collect(Collectors.toList());
+					items = StreamSupport.stream(iterable.spliterator(), false).toList();
 				else
-					items = new ArrayList<>();
+					items = Collections.emptyList();
 				if (templates != null) {
 					for (Object template : templates) {
 						GeneratorTemplate generatorTemplate = new GeneratorTemplate(new File((String) ((Map<?, ?>) template).get("name")),
@@ -516,7 +504,7 @@ public class Generator implements IGenerator, Closeable {
 						// we store file generation conditions for current mod element
 						List<Boolean> conditionChecks = new ArrayList<>();
 						for (int i = 0; i < items.size(); i++) {
-							conditionChecks.add(i, 
+							conditionChecks.add(i,
 									!generatorTemplate.shouldBeSkippedBasedOnCondition(this, items.get(i)));
 						}
 
@@ -531,12 +519,8 @@ public class Generator implements IGenerator, Closeable {
 						templateID++;
 					}
 
-					// only add templates list if at least one list template would be generated
-					// or if we need all template lists possible for the given mod element (performFSTasks is false)
-					if (!items.isEmpty() || !performFSTasks) {
-						fileLists.add(new GeneratorTemplatesList(groupName, Collections.unmodifiableList(items),
-								generatableElement, Collections.unmodifiableMap(files)));
-					}
+					fileLists.add(new GeneratorTemplatesList(groupName, items, generatableElement,
+							Collections.unmodifiableMap(files)));
 				}
 			}
 		}
